header on mobile fix

--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -39,7 +39,7 @@
   z-index: 9;
   left: 0px;
   top: 0px;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   background-color: $dark;
 
